fixing spacing (#42)

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -253,7 +253,8 @@ header {
 							gap: 5%;
 							justify-content: flex-end;
 							margin-top: 0;
-							padding-right: 4em;
+							padding-left: 1em;
+							padding-right: 1em;
 							top: 100px;
 							width:100%;
 							.dropdown-mega-header{
